Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
Qt Creator 4.7.0-beta1, Qt Creator 4.7.0-beta2, Qt Creator 4.7.0-rc1, Qt Creator 4.7.0
-
Windows 10 x64, QtCreator 4.7, QtCreator 4.6.2, Qt 5.9 x64 and x86
Description
After the update of qtcreator from version 4.6.2 to version 4.7, the QOpenGLFunctions_2_0, QOpenGLFunctions_2_1 and so on ceased to function normally. I checked the version of opengl and returned 2.0. But in the older qtcreator, it returned the version correctly (4.6).
I attached a simple source code for the test.
Attachments
Issue Links
- is duplicated by
-
QT3DS-2152 Viewer application crashes
-
- Closed
-
-
QT3DS-2074 simple qml with 3D studio crash and all project with 3D studio presentation too
-
- Closed
-
- relates to
-
QTCREATORBUG-20806 any gl call produce this error : d_1_0_Core is nullptr
-
- Closed
-
-
QTBUG-75316 Plugin initialization failed: Cannot create OpenGL context
-
- Closed
-
-
QTCREATORBUG-20856 Unable to run GL Programs from within QT Creator
-
- Closed
-
- replaces
-
QTBUG-66409 ANGLE D3D11 errors when scrolling ListView containing TextField
-
- Open
-
-
QTCREATORBUG-20920 OpenGL issues when running software from QtCreator
-
- Closed
-
-
QTCREATORBUG-20851 [REG: 4.6->4.7] Qt Creator passes QT_OPENGL=angle to all projects automatically
-
- Closed
-